--- a/index.html
+++ b/index.html
@@ -75,13 +75,16 @@
                         <div class="p4-li2"><a href="project/Tmall/tianmao.html" target="_blank"><img src="img/3-2.jpg" alt=""></a></div>
                     </li>
                     <li>
-                        <div class="p4-li3"><a href="project/qiyezhan/qiyezhan.html" target="_blank"><img src="img/3-3.jpg" alt=""></a></div>
+                        <div class="p4-li3"><a href="project/Todolist/index.html" target="_blank"><img src="img/3-3.jpg" alt=""></a></div>
                     </li>
                     <li>
                         <div class="p4-li4"><a href="project/TypingGame/dazi.html" target="_blank"><img src="img/3-4.jpg" alt=""></a></div>
                     </li>
                     <li>
-                        <div class= "p4-li5"><a href="project/GobangGame/wuziqi.html" target="_blank"><img src="img/3-5.jpg" alt=""></a></div>
+                        <div class= "p4-li5"><a href="project/GobangGame/wuziqi.html" target="_blank"><img src="img/3-6.jpg" alt=""></a></div>
+                    </li>
+                    <li>
+                        <div class= "p4-li6"><a href="project/qiyezhan/qiyezhan.html" target="_blank"><img src="img/3-5.jpg" alt=""></a></div>
                     </li>
 
                 </ul>
@@ -118,7 +121,7 @@
             anchors: ['page1', 'page2', 'page3', 'page4', 'page5'],
         });
     });
-
+    
     $(".p2-list li").mouseover(function () {
         $(this).addClass("rotateOut animated")
     });
